--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -72,4 +72,56 @@ color: #252432;
         border-radius: 10px;
         /* margin: 0 auto; */
     }
-   
+   /* follwers */
+.container{
+    text-align: center;
+    padding: 60px 60px;
+    /* max-width: 500px; */
+    margin: 100px; 
+    background-color: #e0dff6;
+    font-size: 20px;
+    height: 360px;
+    border-radius: 10px;
+}
+.box-container{
+display: flex;
+justify-content: space-around;
+flex-wrap: wrap;
+font-size: 20pxz;
+/* display: block; */
+}
+.box-item h3{
+color: #7d75ee;
+font-size: 80px;
+margin: 50px;
+/* gap: 50px; */
+}
+.box-item p{
+font-size: 16px;
+color: #7d75ee;
+}
+
+
+/* card */
+.card{
+    width: 120px;
+background-color: #F2EDED;
+    font-size: 10px;
+    height:160px;
+    padding: 30px;
+    border-radius: 5px;
+}
+
+.card-style{
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    align-items: center;
+
+    
+}
+    
+.head{
+    text-align: center;
+    font-size: 20px;
+}
