--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -33,6 +33,9 @@ nav{
     font-size: 30px;
     font-weight: bold;
 }
+.title button:hover{
+    background-color: gold;
+}
 .btn-primary{
     color: #FFFFFF;
     background-color: #4E47FF;
@@ -40,6 +43,9 @@ nav{
  border-radius: 6px;
     height: 50px;
     width: 160px;   
+}
+.btn button:hover{
+    background-color: gold;
 }
 /* bannner style */
 
@@ -52,6 +58,9 @@ nav{
     margin-left: 141px;
     margin-right: 159px;
     margin-bottom: 0;
+ }
+ .banner button:hover{
+    background-color: gold;
  }
 .banner-title{
     font-size:25px;
@@ -70,13 +79,13 @@ color: #252432;
         width: 403px;
         height: 250px;
         border-radius: 10px;
-        /* margin: 0 auto; */
+     
     }
    /* follwers */
 .container{
     text-align: center;
     padding: 60px 60px;
-    /* max-width: 500px; */
+  
     margin: 100px; 
     background-color: #e0dff6;
     font-size: 20px;
@@ -88,13 +97,13 @@ display: flex;
 justify-content: space-around;
 flex-wrap: wrap;
 font-size: 20pxz;
-/* display: block; */
+
 }
 .box-item h3{
 color: #7d75ee;
 font-size: 80px;
 margin: 50px;
-/* gap: 50px; */
+
 }
 .box-item p{
 font-size: 16px;
@@ -124,4 +133,106 @@ background-color: #F2EDED;
 .head{
     text-align: center;
     font-size: 20px;
+}
+/* bannar */
+
+.hero{
+    text-align: center;
+
+font-weight: 20px;
+margin: 151px;
+}
+.hero button:hover{
+    background-color: gold;
+}
+.pictuer{
+align-items: center;
+background-color: #FFFFFF;
+}
+.hero p{
+    font-size: 8px;
+}
+.hero h2{
+    font-size: 25px;
+}
+.hero img{
+border-radius: 15px;
+margin-top: 10px;
+} 
+
+
+
+
+
+/* form-filap */
+
+ .contact-section{
+    display: flex;
+    justify-content: center;
+margin: 150px;
+background-size: 1140px 632px; 
+ } 
+
+ .sec-items{
+    display: flex;
+    justify-content: space-between;
+align-items: flex-start;
+    gap: 400px;
+    padding-right: 1px;
+ }
+
+ .sec-text h3{
+font-size: 48px;
+font-weight: 500px;
+ }
+
+.contact-form{
+    flex: 1;
+    display: flex;
+    align-items: flex-start;
+    gap: 5px;
+    flex-direction: column;
+}
+    
+.contact-form label{
+    font-weight: 10px;
+    font-size: 10px;
+}
+
+.contact-form input, textarea{
+padding: 15px;
+border: 1px solid #D6DDED;
+border-radius: 8px;
+font-size: 10px;
+width: 150px;
+}
+
+.contact-form button:hover{
+    background-color:gold;
+}
+
+/* footterp */
+
+.fotter-section{
+    text-align: center;
+color: #4E47FF;
+font-weight: bold;
+font-size: 50px;
+margin-bottom: 0;
+}
+.fotter-sub-title{
+    font-size: 10px;
+    text-align: center;
+}
+.fotter-sub-title li{
+    list-style: none;
+} 
+
+.fotter-sub-title ul{
+ display: inline-flex;
+   gap: 10px;
+}
+
+.fotter-sub-title li a{
+    text-decoration: none;
 }
